fix(contractType): dark mode on table implemented and some UI changes

--- a/src/app/app.theme.scss
+++ b/src/app/app.theme.scss
@@ -142,7 +142,7 @@ $typography: mat.define-typography-config(
     $title: mat.define-typography-level(20px, 32px, 600),
     $body-2: mat.define-typography-level(14px, 24px, 600),
     $button: mat.define-typography-level(14px, 14px, 600),
-    $input: mat.define-typography-level(16px, 1.125, 400) // line-height must be unitless !!!,,,,,,,,,,,,,,,,,,,,,,,,
+    $input: mat.define-typography-level(16px, 1.125, 400) // line-height must be unitless !!!,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 // Setup the typography
@@ -327,7 +327,42 @@ $blue-gray-dark-theme-accent-palette: mat.define-palette(mat.$blue-gray-palette,
 $blue-gray-dark-theme-warn-palette: mat.define-palette(mat.$red-palette);
 
 // Create the Material theme object
-$blue-gray-dark-theme: mat.define-dark-theme($blue-gray-dark-theme-primary-palette, $blue-gray-dark-theme-accent-palette, $blue-gray-dark-theme-warn-palette);
+$dark-theme-primary: (
+    50: #ffffff,
+    100: #ffffff,
+    200: #ffffff,
+    300: #ffffff,
+    400: #ffffff,
+    500: #ffffff,
+    600: #ffffff,
+    700: #ffffff,
+    800: #ffffff,
+    900: #ffffff,
+    A100: #ffffff,
+    A200: #ffffff,
+    A400: #ffffff,
+    A700: #ffffff,
+    contrast: (
+        50: #000000,
+        100: #000000,
+        200: #000000,
+        300: #000000,
+        400: #000000,
+        500: #000000,
+        600: #000000,
+        700: #000000,
+        800: #000000,
+        900: #000000,
+        A100: #000000,
+        A200: #000000,
+        A400: #000000,
+        A700: #000000,
+    ),
+);
+
+$blue-gray-dark-theme: mat.define-dark-theme($dark-theme-primary, $blue-gray-dark-theme-accent-palette, $blue-gray-dark-theme-warn-palette);
+
+//come here
 
 // Add ".theme-blue-gray-dark" class to the body to activate this theme.
 // Class name must start with "theme-" !!!
